# decompv-libragrad-v1

./: .gitignore  README.org  pyproject.toml
decompv/: constants.py  early_boot.py  utils.py
decompv/x/: bootstrap.py  gbrand.py  imagenet.py  imagenet_s.py
decompv/x/ds/: clip_datasets.py  coco_utils.py  compute_IG.py  compute_IG_raw.py  compute_IxG.py  compute_IxG_smooth.py  compute_attention.py  compute_cls_metrics.py  compute_completeness_metrics.py  compute_decompv1.py  compute_globalti.py  compute_masked_logits.py  compute_patchify.py  compute_qual.py  compute_saliency.py  compute_saliency_smooth.py  compute_seg.py  imagenet_hard.py  imagenetval.py  indexed.py  main.py  mura.py  oxford_pet.py  seg.py  test1.py  test2.py  utils.py
decompv/x/faith/: bootstrap.py  utils.py
decompv/x/run/: config_1.py  duplicate_hashes.py  migrate_1.py  run_v1.py  run_v1_default_config.py  sync_experiments.py
