[tool.poetry]
name = "decompv"
version = "0.1.0"
description = "DecompV"
authors = ["Feraidoon <feraidoonmehri@gmail.com>"]
license = "MIT"
readme = "README.org"
exclude = ["__pycache__"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
